--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="nota">Nota</string>
     <string name="verificar_el_numero_de_telefono">Verificar el número de teléfono.</string>
     <string name="numero_bloqueado">Número de teléfono bloqueado, contactar a la Administración</string>
+    <string name="error_reintentar">Error, reintentar de nuevo</string>
 
 
 
