token store agregado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
     <string name="menu">Ménu</string>
     <string name="solicitudes">Solicitudes</string>
     <string name="cerrar_sesion">Cerrar sesión</string>
-
-
+    <string name="si">Sí</string>
+    <string name="no">No</string>
 
 
 </resources>
