--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,8 +32,8 @@
     <string name="nota_dospuntos">Nota: </string>
     <string name="telefono_dospuntos">Teléfono: </string>
     <string name="direccion_dospuntos">Dirección: </string>
-
-
-
+    <string name="borrar_solicitud">Borrar Solicitud</string>
+    <string name="confirmar_accion">Confirmar Acción</string>
+    <string name="borrar">Borrar</string>
 
 </resources>
