--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,12 @@
     <string name="nueva_actualizacion">"¡Nueva actualización disponible! Descarga ahora para disfrutar de las últimas mejoras.</string>
     <string name="permiso_gps_requerido">Permiso GPS requerido</string>
     <string name="para_usar_esta_funcion_gps">Para usar esta función, necesitas conceder permiso GPS en los ajustes de la aplicación.</string>
+    <string name="enviar_solicitud">Enviar Solicitud</string>
+    <string name="error_login_firebase">Error al abrir el Mapa, reintentar de nuevo</string>
+
+
+
+
 
 </resources>
 
