--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,8 +74,8 @@
     <string name="recolectores_disponibles">Recolectores Disponibles</string>
     <string name="scroll">Scroll</string>
     <string name="centrar_ubicacion">Centrar Ubicación</string>
-
-
+    <string name="obteniendo_ubicacion">Obteniendo Ubicación</string>
+    <string name="recolector">Recolector</string>
 
 
 
