--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="centrar_ubicacion">Centrar Ubicación</string>
     <string name="obteniendo_ubicacion">Obteniendo Ubicación</string>
     <string name="recolector">Recolector</string>
-
+    <string name="agenda">Agenda</string>
 
 
 
